--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
   font-size: 10px;
 }
        </style>
-    <title>AOV</title>
+    <title>PB Zepetto</title>
     <body style="background-color:#FFFFFF;">
   <section class="bg-header">
     <div id="alertId">
