--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     <body style="background-color:#FFFFFF;">
   <section class="bg-header">
     <div id="alertId">
-      <img src="https://cdn1.codashop.com/S/content/common/images/helpers/33.png" alt="" />
+      <img src="https://cdn1.codashop.com/S/content/common/images/helpers/185.png" alt="" />
       <h1 onclick="matikan(alert_help)">?</h1>
     </div>
     <img src="https://cdn1.codashop.com/S/content/common/images/mno/PBID_Coda_Asset_Product_640X241.jpg" alt="" />
@@ -323,6 +323,8 @@
   <!-- BAGIAN HEADER --> 
    <form class="input_form" action="" method="get" accept-charset="utf-8">
      <h2>ID PLAYER</h2>
+    <div onclick="aktifkan(alert_help)" class="info_alert">
+        <h3 id="bg95">?</h3>
      
      </div>
      <input type="number" name="" id="userId" value="" placeholder="MASUKKAN ID PLAYER" oninput="userid()" autofocus=""/>
